--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,6 +11,7 @@
     tools:openDrawer="start">
 
     <include
+        android:id="@+id/content_layout"
         layout="@layout/app_bar"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
