--- a/app/src/main/res/layout/add_vaccine_fragment.xml
+++ b/app/src/main/res/layout/add_vaccine_fragment.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".ui.fragments.drug_list.add_drug.AddDrugFragment">
+    tools:context=".ui.fragments.vaccines.add_vaccine.AddVaccineFragment">
 
     <TextView
         android:layout_width="wrap_content"
@@ -28,7 +28,7 @@
         android:layout_marginStart="24dp"
         android:layout_marginEnd="24dp"
         android:fontFamily="@font/opensans_regular"
-        android:hint="Enter procedure name"
+        android:hint="Enter vaccine name"
         android:textSize="14dp" />
 
 
