create fragments part 3 and link page together

--- a/app/src/main/res/layout/insurance_fragment.xml
+++ b/app/src/main/res/layout/insurance_fragment.xml
@@ -7,7 +7,7 @@
     tools:context=".ui.fragments.insurance.InsuranceFragment">
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/add_drug"
+        android:id="@+id/add_insurance"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_alignParentEnd="true"
@@ -54,10 +54,11 @@
         </LinearLayout>
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/drugs_recycler"
+            android:id="@+id/insurance_recycler"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            tools:listitem="@layout/" />
+            tools:listitem="@layout/item_insurance"
+             />
 
     </LinearLayout>
 </RelativeLayout>
