--- a/app/src/main/res/layout/app_bar.xml
+++ b/app/src/main/res/layout/app_bar.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.activities.main.MainActivity">
+
     <fragment
         android:id="@+id/nav_host_fragment1"
         android:name="androidx.navigation.fragment.NavHostFragment"
@@ -13,6 +14,7 @@
         android:layout_marginTop="?android:attr/actionBarSize"
         app:defaultNavHost="true"
         app:navGraph="@navigation/second_nav" />
+
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/app_bar_container"
         android:layout_width="match_parent"
@@ -23,70 +25,12 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:gravity="center_vertical">
-
-                <ImageView
-                    android:id="@+id/menu_image"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/ic_baseline_menu_24" />
-
-                <TextView
-                    android:id="@+id/app_bar_title"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="12dp"
-                    android:fontFamily="@font/opensans_bold"
-                    android:text="Appointment List"
-                    android:textColor="@color/white"
-                    android:textSize="19dp" />
-            </LinearLayout>
+            android:background="?attr/colorPrimary"
+            app:popupTheme="@style/Theme.AdminBlume.PopupOverlay">
 
         </androidx.appcompat.widget.Toolbar>
     </com.google.android.material.appbar.AppBarLayout>
 
-    <com.google.android.material.appbar.AppBarLayout
-        android:id="@+id/app_bar_container2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:theme="@style/AppTheme.AppBarOverlay"
-        android:visibility="gone">
-
-        <androidx.appcompat.widget.Toolbar
-            android:id="@+id/toolbar2"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:gravity="center_vertical">
-
-                <ImageView
-                    android:id="@+id/back_image"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/ic_baseline_arrow_back_24" />
-
-                <TextView
-                    android:id="@+id/app_bar_title1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="12dp"
-                    android:fontFamily="@font/opensans_bold"
-                    android:text="Appointment List"
-                    android:textColor="@color/white"
-                    android:textSize="19dp" />
-            </LinearLayout>
-
-        </androidx.appcompat.widget.Toolbar>
-    </com.google.android.material.appbar.AppBarLayout>
 
 
 
