--- a/app/src/main/res/layout/appointment_list_fragment.xml
+++ b/app/src/main/res/layout/appointment_list_fragment.xml
@@ -11,23 +11,14 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <com.applandeo.materialcalendarview.CalendarView
-            android:id="@+id/calendarView"
-            android:layout_width="match_parent"
-            app:type="one_day_picker"
-            app:eventsEnabled="true"
-            app:headerColor="@color/colorPrimary"
-           app:selectionColor="@color/colorPrimary"
-            android:layout_height="wrap_content" />
-     <!--   <com.kizitonwose.calendarview.CalendarView
+        <com.google.android.material.card.MaterialCardView
             android:id="@+id/calendarView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:cv_dayViewResource="@layout/calendar_day_layout" />-->
-        <!--<CalendarView
-            android:id="@+id/calendar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />-->
+            app:mcv_showOtherDates="all"
+            app:mcv_selectionColor="#00F"
+            />
+
 
 
     </LinearLayout>
