--- a/app/src/main/res/layout/procedures_item.xml
+++ b/app/src/main/res/layout/procedures_item.xml
@@ -12,21 +12,23 @@
         android:layout_height="wrap_content"
         android:text="teeth procedure"
         android:layout_marginTop="4dp"
+        android:layout_alignParentStart="true"
         android:fontFamily="@font/opensans_bold"
         android:textSize="16dp"
         android:layout_marginStart="12dp"
 
-        android:layout_toEndOf="@+id/person_image"/>
+       />
+
     <TextView
         android:id="@+id/price_procedures"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="EGP 200"
-        android:fontFamily="@font/opensans_regular"
-        android:textSize="14dp"
-        android:layout_marginStart="12dp"
         android:layout_below="@+id/name_procedures"
-        android:layout_toEndOf="@+id/person_image"/>
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="12dp"
+        android:fontFamily="@font/opensans_regular"
+        android:text="EGP 200"
+        android:textSize="14dp" />
 
     <ImageView
         android:layout_width="wrap_content"
