--- a/app/src/main/res/layout/vaccine_fragment.xml
+++ b/app/src/main/res/layout/vaccine_fragment.xml
@@ -7,7 +7,7 @@
     tools:context=".ui.fragments.vaccines.VaccineFragment">
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/add_drug"
+        android:id="@+id/add_vaccine"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_alignParentEnd="true"
@@ -54,10 +54,10 @@
         </LinearLayout>
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/drugs_recycler"
+            android:id="@+id/vaccine_recycler"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            tools:listitem="@layout/" />
+             />
 
     </LinearLayout>
 </RelativeLayout>
