--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -59,4 +59,8 @@
         <item name="android:textSize">11dp</item>
 
     </style>
+
+    <style name="Theme.AdminBlume.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <style name="Theme.AdminBlume.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 </resources>
